# learn-rust

./: .gitignor  .gitignore
codewars/replace-alphabet-pos/: Cargo.toml  text.txt
codewars/roman-numerals-encoder/: Cargo.toml
discord_status/src/: main.rs
libs/actix/: docker-compose.yml
libs/diesel/: docker-compose.yml
thebook/discord_status/: Cargo.toml
thebook/enum-learn/: Cargo.toml
thebook/errors-panic/: Cargo.toml
thebook/fn-lesson/: Cargo.toml
thebook/helloWorld/: Cargo.toml
thebook/learn-struct/: Cargo.toml
thebook/minigrep-2/: Cargo.toml
thebook/packes-crates-learn/: Cargo.toml
thebook/part10/: Cargo.toml
thebook/part10_3/: Cargo.toml
thebook/part11_1/: Cargo.toml
thebook/part13_2/: Cargo.toml
thebook/part17_1/: Cargo.toml
thebook/part17_2/: Cargo.toml
thebook/part17_2/src/: main.rs
thebook/part17_2/src/gui/: gui.rs
thebook/part17_3/: Cargo.toml
thebook/part18_1/: Cargo.toml
thebook/part20/: Cargo.toml
thebook/part_01_2_hello_world/: Cargo.toml
thebook/part_01_3_hello_cargo/: Cargo.toml
thebook/part_02/: Cargo.toml
thebook/part_03_1/: Cargo.toml
thebook/part_04/: Cargo.toml
thebook/part_10_2/: Cargo.toml
thebook/part_13_1/: Cargo.toml
thebook/part_13_4_loops/: Cargo.toml
thebook/part_15_1/: Cargo.toml
thebook/part_15_3/: Cargo.toml
thebook/part_15_4/: Cargo.toml
thebook/part_15_5/: Cargo.toml
thebook/part_15_6/: Cargo.toml
thebook/part_20/: <CR>
thebook/restaurant/: Cargo.toml  lib.rs
thebook/restaurant/src/: main.rs  my_hh.rs
thebook/restaurant/src/oo/: mod.rs  my_hh.rs  my_hh2.rs
(+84 files in other folders)
