[package]
name = "part17_2"
version = "0.1.0"
authors = ["Michael Held <it@mikeyheld.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#categories = [
#    "gui"
#]

#[lib]
#name = "gui"
#path = "src/gui/lib.rs"
