[package]
name = "restaurant"
version = "0.1.0"
authors = ["Michael Held <it@mikeyheld.com>"]
edition = "2018"

#[lib]
#name = "mylib"
#path = "src/lib.rs"

categories = [
    "oo"
    ]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
